--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
         "neuron-php/scaffolding": "0.8.*",
         "phpstan/phpstan": "^1.10",
         "phpstan/extension-installer": "^1.3",
-        "infection/infection": "^0.32.0"
+        "infection/infection": "^0.32.0",
+        "codeception/codeception": "^5.3",
+        "codeception/module-phpbrowser": "^3.0",
+        "codeception/module-asserts": "^3.2",
+        "codeception/module-db": "^3.2"
     },
     "autoload": {
         "psr-4": {
