--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "neuron-php/mvc": "0.9.*",
+        "neuron-php/routing": "0.8.*",
         "neuron-php/data": "0.9.*",
         "neuron-php/cli": "0.8.*",
         "neuron-php/jobs": "0.2.*",
@@ -20,7 +21,8 @@
         "neuron-php/dto": "0.0.*",
         "phpmailer/phpmailer": "^6.9",
         "cloudinary/cloudinary_php": "^2.0",
-        "php-di/php-di": "^7.1"
+        "php-di/php-di": "^7.1",
+        "symfony/yaml": "^6.4"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
